# d2tool

./: .gitignore  .gitmodules  CMakeLists.txt  package-format.md
include/: callbacks.h  extractor.h  file_helper.h  main.h  package.h  parse_helper.h  types.h  window.h  window_extractor.h
src/: extractor.cpp  main.cpp  package.cpp  window_events.cpp  window_extractor.cpp  window_main.cpp  window_package_selector.cpp
